# email-check-rs

./: Cargo.toml  shell.nix
src/: config.rs  mail.rs  main.rs  notify.rs  state.rs  sync.rs
